fix styles when scrolling content in small height - white space in the bottom is necessary

--- a/src/components/PageContainer/PageContainer.css
+++ b/src/components/PageContainer/PageContainer.css
@@ -1,9 +1,15 @@
+.MuiContainer-root.PageContainer {
+    padding: 101px 45px;
+    overflow: auto;
+    min-height: 100vh;
+    display: flex;
+}
+
 .PageContainer .PageContainer-Wrapper {
     display: flex;
     flex-direction: column;
     position: relative;
-    padding: 101px 0;
-    height: calc(100vh - 202px);
+    width: 100%;
 }
 
 @media only screen and (min-width: 600px) {
