--- a/src/components/Stepper/Stepper.css
+++ b/src/components/Stepper/Stepper.css
@@ -20,6 +20,7 @@
     position: absolute;
     bottom: 30px;
     color: black;
+    cursor: pointer;
 }
 
 .AppStepper-Button.AppStepper-Previous {
