--- a/src/pages/FourLaws/components/Feelings/Feelings.css
+++ b/src/pages/FourLaws/components/Feelings/Feelings.css
@@ -1,3 +1,7 @@
+.Law-Feelings {
+    overflow: hidden;
+}
+
 .MuiSvgIcon-root.Train-Diagram {
     width: 100%;
     font-size: 450px;
